--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "fpl-analytics",
   "version": "0.0.1",
   "description": "Fantasy Premier League analytics and data visualization",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
