--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
+    "http-proxy-middleware": "^3.0.3",
     "mongodb": "^6.14.0",
     "mongoose": "^8.11.0",
     "node-cache": "^5.1.2",
