--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "axios": "^1.7.9",
     "cheerio": "^1.0.0",
     "client": "^0.0.1",
+    "compression": "^1.8.0",
     "concurrently": "^9.1.2",
     "cors": "^2.8.5",
     "create-react-app": "^5.1.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
+    "helmet": "^8.1.0",
     "http-proxy-middleware": "^3.0.3",
     "mongodb": "^6.14.0",
     "mongoose": "^8.11.0",
