--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "node-cache": "^5.1.2",
     "node-fetch": "^2.7.0",
     "nodemon": "^3.1.9",
+    "uuid": "^11.1.0",
     "winston": "^3.17.0",
     "ws": "^8.18.1"
   }
